--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+Алгоритм парсинга реализован в классе Parser (lib/parser.rb)
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+В проекте одна модель Page, где хранятся url сайтов для парсинга.
+Область для просмотра результатов парсинга всех сайтов: http://parse-title.herokuapp.com/
+Область админа для редактирования сайтов и выброчного парсинга: http://parse-title.herokuapp.com/admin/pages
